# rosbag-utils

./: CMakeLists.txt  README.md  bag_to_image.launch  package.xml
launch/: bag_to_image.launch
scripts/: split_bag.py
